syntax = "proto3";

option java_package = "org.javacomp.proto";
option java_outer_classname = "SymbolProto";

// Represents a named Java symbol
message Symbol {
  enum Type {
    TYPE_UNKNOWN = 0;
    CLASS = 1;
    INTERFACE = 2;
    ANNOTATION = 3;
    ENUM = 4;
    METHOD = 5;
    VARIABLE = 6;
    // Each part of a pacakage qualifier
    // e.g org.javacomp has 2 qualifiers: org and javacomp
    QUALIFIER = 7;
    // A pseudo symbol representing an unnamed scope.
    PSEUDO = 8;
  }

  enum AccessLevel {
    ACCESS_LEVEL_UNKNOWN = 0;
    PUBLIC = 1;
    PROTECTED = 2;
    PACKAGE_PRIVATE = 3;
    PRIVATE = 4;
  }

  Type type = 1;

  // The last part of fully qualified name.
  string simple_name = 2;

  // Each part of the fully qualified name, excluding simple_name.
  repeated string qualifier = 3;
  AccessLevel access_level = 4;
  bool is_static = 5;
}
